# injection-scanner

./: .gitignore  03-injection-scanner.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PATTERNS.md  README.md
.claude/hooks/: on-stop.sh  post-tool-call.sh  pre-bash.sh
.claude/skills/code-review/: SKILL.md
.claude/skills/pr-artifacts/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/phase-1/: 01-CONTEXT.md
docs/adr/: ADR-001-tech-stack.md
docs/superpowers/plans/: 2026-04-02-injection-scanner-v0.0.1.md
examples/: README.md  clean-skill.md  exfiltration-attack.md  instruction-injection-attack.md  jailbreak-attack.md  mixed-attack.md  role-override-attack.md  suppressed-documentation.md
patterns/core/: encoding.yaml  exfiltration.yaml  instruction-injection.yaml  jailbreak.yaml  role-override.yaml
src/: allowlist.rs  lib.rs  main.rs  pattern.rs  reporter.rs  scanner.rs
src/patterns/: mod.rs
tests/: allowlist_test.rs  cli_test.rs  pattern_test.rs  reporter_test.rs  scanner_test.rs
tests/fixtures/: allowlisted.md  clean-skill.md  injected-skill.md
