[package]
name = "injection-scanner"
version = "0.0.1"
edition = "2021"
description = "Prompt injection static scanner for AI spec files, skills, and RAG documents"
license = "MIT"
repository = "https://github.com/UnityInFlow/injection-scanner"
authors = ["Jiri Hermann"]
keywords = ["prompt-injection", "security", "ai", "scanner", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
anyhow = "1"
thiserror = "2"
